# voiceprint

./: .dockerignore  .gitignore  Makefile  README.md  compose.yml  openapi.json  wyoming.Dockerfile  wyoming.compose.yml
.devcontainer/: devcontainer.json  install-node-deps.sh  install-python-deps.sh
.github/instructions/: react.instructions.md  wyoming.instructions.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/api/: dto.ts  models.ts  speakers.ts  voices.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: models-dashboard.tsx  navbar.tsx  speakers-dashboard.tsx  voices-dashboard.tsx
frontend/lib/: api.ts  store.ts
rest_api/: Dockerfile  __main__.py  api.py  app.py  errors.py  openapi.py  requirements.txt
utils/: __init__.py
voiceprint/: .gitignore  Dockerfile  extract_mfccs.py  helpers.py  identify.py  interpreter.py  library.py  library_schema.json  model.py  model_service.py  pyproject.toml  requirements.txt  requirements_cpu.txt  speaker.py  speaker_model.py  speaker_repository.py  speaker_schema.json  speaker_service.py  train_model.py  voiceprint.py  voiceprint_model.py  voiceprint_repository.py  voiceprint_service.py
voiceprint/data/: speakers.db
voiceprint/http_server/: README.md  __main__.py  models.py  requirements.txt  server.py  speakers.py  voices.py
voiceprint/server/: server.py
web_ui/: .env.example  .gitignore  Dockerfile  index.html  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
wyoming_voiceprint/: Dockerfile  README.md  __main__.py  handler.py
(+65 files in other folders)
